--- a/assets/ap2.css
+++ b/assets/ap2.css
@@ -1,11 +1,12 @@
 body{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;    
 }
 
 .inhalt{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .abschnitt{
@@ -13,7 +14,7 @@ body{
     border-radius: 15px;
     padding: 10px 10px;
     margin: 10px 10px;;
-    width: 200px;            
+    width: 350px;            
 }
 
 .abschnitt:hover{
