--- a/assets/ap2.css
+++ b/assets/ap2.css
@@ -21,6 +21,11 @@ body{
     background-color: #f3f3f3;
 }
 
+.softwareentwicklung{
+    max-height: 400px;;
+    overflow-y: auto;
+}
+
 a{
     text-decoration: none;
     color: rgb(51, 124, 51);
